--- a/app/views/posts/post_types/_blog.erb
+++ b/app/views/posts/post_types/_blog.erb
@@ -1,6 +1,9 @@
-<h2><%= bulletin_name params[:bulletin_id] %></h2>
 
 
+<div class="row">
+  <div class="col-md-10"><h2><%= bulletin_name params[:bulletin_id] %></h2></div>
+  <div class="col-md-2"><h2 style="text-align:right;"><%= link_to '각서 작성하기', new_bulletin_post_path, class: 'btn btn-default'%></h2></div>
+</div>
 <% @posts.each do | post | %>
   <% if post.updatable_by? current_user %>
       <div class='post'>
@@ -21,4 +24,3 @@
 <% end %>
 <br>
 
-<%= link_to '각서 작성하기', new_bulletin_post_path, class: 'btn btn-default' %>
