--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,5 +9,8 @@ $navbar-default-link-hover-bg: black;
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'posts';
-
-body { padding-top: 60px; }
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
+body { padding-top:60px; 
+       font-family: 'Nanum Pen Script';
+}
