show_edit and signIn to korean

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,48 +7,58 @@
   </div>
 </div>
 <% if @post.bulletin.post_type == :blog %>
-  <p>
-    <strong>목표:</strong>
-    <%= @post.title %>
-  </p>
-  <p>
-    <strong>구체적인 목표와 계획:</strong>
-    <%= @post.content %>
-  </p>
-  <p>
-    <strong>시작 날짜:</strong>
-    <%= @post.start_day %>
-  </p>
-  <p>
-    <strong>종료 날짜:</strong>
-    <%= @post.end_day %>
-  </p>
-  <p>
-    <strong>예치금:</strong>
-    <%= @post.set_money %>
-  </p>
-  <p>
-    <strong>목표달성 확인자:</strong>
-    <%= @post.checker_name %>
-  </p>
-  <p>
-    <strong>목표달성 실패 시 예치금 수령자:</strong>
-    <%= @post.receiver_name %>
-  </p>
-  <p>
-    <strong>예금주:</strong>
-    <%= @post.racer_name %>
-  </p>
+<div class="well" style="text-align:center">
+  <h2 style="font-weight:bold;">계약서</h2><br/><br/>
+  <p><span style="font-weight:bold;font-size:25px;"><%= @post.start_day %></span>부터 
+     <span style="font-weight:bold;font-size:25px;"><%= @post.end_day %></span> 까지
+     <span style="font-weight:bold;font-size:25px;"><%= @post.title %></span>을 달성할 것입니다.</p>
+  <p>목표 달성을 위해 세운 구체적인 목표와 계획은 <span style="font-weight:bold;font-size:25px;"><%= @post.content %></span> 입니다.</p>
+  <p>목표달성 실패 시 예치금 설정 금액인 <span style="font-weight:bold;font-size:25px;"><%= @post.set_money %></span>원이 
+     <span style="font-weight:bold;font-size:25px;"><%= @post.receiver_name %></span> 님에게 송금됩니다.</p>
+  <p>목표달성 확인자는<span style="font-weight:bold;font-size:25px;"> <%= @post.checker_name %></span> 님입니다.</p>
+  <!--<p>-->
+  <!--  <strong>목표:</strong>-->
+  <!--  <%= @post.title %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>구체적인 목표와 계획:</strong>-->
+  <!--  <%= @post.content %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>시작 날짜:</strong>-->
+  <!--  <%= @post.start_day %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>종료 날짜:</strong>-->
+  <!--  <%= @post.end_day %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>예치금:</strong>-->
+  <!--  <%= @post.set_money %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>목표달성 확인자:</strong>-->
+  <!--  <%= @post.checker_name %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>목표달성 실패 시 예치금 수령자:</strong>-->
+  <!--  <%= @post.receiver_name %>-->
+  <!--</p>-->
+  <!--<p>-->
+  <!--  <strong>예금주:</strong>-->
+  <!--  <%= @post.racer_name %>-->
+  <!--</p>-->
   <% if @post.is_confirmed === 1 || @post.is_confirmed === 2%>
    <p>
     <strong>목표달성 : </strong>
     <%= @post.is_confirmed %>
   </p>
   <% end %>
-  <p>
-    <strong>입금 계좌번호:</strong>
-    012345-67-891011 / 씨앗은행 / 예금주:이상해씨
-  </p>
+</div>
+<p>
+  <strong>예치금 입금 계좌번호:</strong>
+  012345-67-891011 / 씨앗은행 / 예금주:이상해씨
+</p>
  
   <% unless @post.is_confirmed === 1 || @post.is_confirmed === 2 %>
   <button type="button" class="btn btn-success success_goal" data-toggle="modal" data-target="#exampleModal_1" data-whatever="<%= @post.racer_name %>">목표달성!</button>
