--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,8 +54,8 @@
                 </ul>
               </li>
             <% else %>
-              <li><%= link_to "Sign in", new_user_session_path %></li>
-              <li><%= link_to "Sign up", new_user_registration_path %></li>
+              <li><%= link_to "로그인", new_user_session_path %></li>
+              <li><%= link_to "회원가입", new_user_registration_path %></li>
             <% end %>
           </ul>
         </div><!--/.nav-collapse -->
