--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -57,7 +57,7 @@
 </div>
 <p>
   <strong>예치금 입금 계좌번호:</strong>
-  012345-67-891011 / 씨앗은행 / 예금주:이상해씨
+  324702-04-138405 / 국민은행 / 예금주:황호
 </p>
  
   <% unless @post.is_confirmed === 1 || @post.is_confirmed === 2 %>
