--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
       created by <%= current_user.email %>, <%= @post.created_at %>
     </p>
   </div>
-</div>
+</div>1111111111111111111111
 <% if @post.bulletin.post_type == :blog %>
 <div class="well" style="text-align:center">
   <h2 style="font-weight:bold;">계약서</h2><br/><br/>
