--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -18,7 +18,7 @@
           
           </div>
           <div class="col-md-4 col-lg-4" style="text-align:center;width:100%">
-            <h1 style="font-size:100px;">DO IT</h1>
+            <h1 style="font-size:100px;">DO IT TOGETHER</h1>
             <h2 style="padding-bottom:20px;">목표 달성을 위한 웹페이지</h2>
             <%= link_to "목표 달성하러 가기", bulletin_posts_path(1), class:'btn btn-primary btn-lg toggle-btn' %>
             <h3>목표, 계획은 세웠지만 실천에 옮기기 힘들어 목표달성에 실패한 분들에게 도움을 드립니다.</h3>
