--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -16,6 +16,7 @@
   <p>목표달성 실패 시 예치금 설정 금액인 <span style="font-weight:bold;font-size:25px;"><%= @post.set_money %></span>원이 
      <span style="font-weight:bold;font-size:25px;"><%= @post.receiver_name %></span> 님에게 송금됩니다.</p>
   <p>목표달성 확인자는<span style="font-weight:bold;font-size:25px;"> <%= @post.checker_name %></span> 님입니다.</p>
+  <span style="font-weight:bold;font-size:25px;"> <%= @post.goal_period %> 일에 한 번씩</span> 
   <!--<p>-->
   <!--  <strong>목표:</strong>-->
   <!--  <%= @post.title %>-->
